completed assignments of HTML level 2 and added an achievements section in the demo-portfolio page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -75,6 +75,15 @@
                 <li>Cooking</li>
             </ul>
         </section>
+        <hr>
+        <section class="Achievements">
+            <h2>Achievements</h2>
+            <ol type="1">
+                <li>Participated in GFG Coding Competition</li>
+                <li>Participated in E-Box Coding Competition</li>
+                <li>Stood <b>third</b> position in ASISC Inter-School Debate Competition</li>
+            </ol>
+        </section>
 
     </main>
 
