--- a/assignments/index.html
+++ b/assignments/index.html
@@ -1,86 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 01</title>
+    <title>Assignments of HTML level 2</title>
+
     <style>
-
-
         body{
-            background-color:black;
+            background-color:brown;
         }
-        .first{
-            background-color: rgb(131, 221, 131);
+        .Video-Tag{
+            background-color:cadetblue;
         }
-        .second{
-            background-color: cornflowerblue;
+        .Question-2{
+            background-color: black;
+            
         }
-        .third{
-            background-color:burlywood
-        }
-        .fourth{
-            background-color:coral;
-        }
-
-        .using-hr{
-            background-color: #cbe8f4;
-            text-decoration-color: #2f4f4f;
-        }
-        hr{
-            border: none;
-            height: 5px;
-            background-color:#a9744f;
-            margin: auto;
-        }
-
-
     </style>
+
 </head>
+
+
 <body>
+    <header><h1>Assignment of HTML LEVEL 2</h1></header>
 
-<!-- first question -->
-    <div class="first">
-        <h1>Hello World</h1>
-        <p>Hello world , this is my first html 5 page , I hope you guys are doing well !! :) </p>
-    </div>
-<!-- second question -->
-    <div class="second">
-        <h1>Delta</h1>
-        <h2>Full Stack Web Development</h2>
-        <h3>MERN Stack</h3>
-        <p>Let's begin our learning journey</p>
-    </div>
-<!-- third question -->
-    <div class="third">
-        <a href="https://www.apnacollege.in/">Click to land onto the page of <b><i>Apna Collge</i></b></a>
-    </div>
+    <main>
 
-    <div class="fourth">
-        <ol type="1">
-            <li>Deepak</li>
-            <li>Epsita</li>
-            <li>Lakshita</li>
-            <li>Tanmay</li>
-            <li>Agrim</li>
-        </ol>
-    </div>
 
-    <div class="using-hr">
-        <p>
-            <h3>Title: The Journey Begins</h3>
+        <section class="Video-Tag">
+            <video width="1920" height="1080" controls>
+                <source src="keyboard-typing.mp4" type ="video/mp4">
+                Your browser doesn't support the video tag , download it from <a href="keyboard-typing.mp4">link</a>
+                </video>
+        </section>
 
-            Once upon a time in a quiet village nestled between green hills, lived a young dreamer named Aryan. He often sat by the riverside, watching the clouds drift by, imagining the world that lay beyond the mountains.
-        </p>
-        <hr>
-        <p>
-            One morning, filled with courage and curiosity, Aryan packed a small bag, whispered goodbye to his family, and set off on his journey. He walked through deep forests, crossed wide rivers, and met people with stories as colorful as the skies.
-        </p>
-        <hr>
-        <p>
-            After many seasons, Aryan returned. He was no longer the boy who left, but a man shaped by the world. Though the village looked the same, everything felt different. His heart was full, his dreams now real.
-        </p> 
-    </div>
+        <section class="Question-2">
+            <h2 style="color: white; font-size: 70px; font-family:cursive ;">Today is the 9 <sup>th</sup> of October and 2 <sup>4</sup> = 16 always</h2>
+        </section>
+    </main>
 
+    <footer>
+        <h3>&copy; 2025 Narayani Dutt Pandey. All rights reserved</h3>
+        <h3>This is a trademark &trade; of the company</h3>
+
+    </foote>
 </body>
-</html><i>Apna Collge</i>
+
+
+</html>
