understood the concepts of semantics in tables

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,26 +15,33 @@
                 <title> Menu </title>
                 <tr><th style="background-color: brown;">Food</th><th style="background-color: burlywood;">Price</th></tr> <!--Creating the header for "Food"-->
                 <tr></tr> <!--Creating the header for "Item"-->
-
-
                 <tr>            <td>Frooti</td>         <td>10</td>         </tr>
                 <tr>            <td>Samosa</td>         <td>07</td>         </tr>
                 <tr style=>            <td>Lays</td>           <td>20</td>         </tr>       
                 <tr>            <td>Pizza</td>          <td>150</td>        </tr>
                 <tr>            <td>Manchurian</td>         <td>50</td>         </tr>
-
-
-
-
-
             </table>
-
-
-
         </section>
 
-
-
+        <section class="Table-Semantics">
+            <table border="black">
+                <thead>
+                    <tr>Item</tr> <tr>Price</tr>
+                </thead>
+                <tbody>
+                    <tr><td>Maggiee</td> <td>20</td></tr>
+                   <tr><td>Samosa</td><td>25</td></tr>
+                   <tr><td>Pepsi</td><td>30</td></tr>
+                   <tr><td>Coca-cola</td> <td>40</td></tr>
+                   <tr><td>Pizza</td> <td>100</td></tr>
+                   <tr><td>Manchurian</td> <td>150</td></tr>
+                   <tr><td>Indian Veg Thaali</td> <td>200</td></tr>
+                   <tr><td>Indian Non-veg thaali</td> <td>250</td></tr>
+                </tbody>
+    
+                <!-- <tfoot><td>Sum of your order</td> <td>------</td></tfoot> -->
+            </table>
+        </section>
         <section class="Forms">
 
 
