--- a/frontend/practiceQs/index.html
+++ b/frontend/practiceQs/index.html
@@ -14,6 +14,9 @@
         .practiceqs4{
             background-color:white;
         }
+        .practiceq7{
+            background-color: whitesmoke;
+        }
     </style>
 </head>
 <body>
@@ -38,6 +41,38 @@
         <h1>Pythagoras theorem says a <sup>2</sup> + b <sup>2</sup> = c <sup>2</sup></h1>
 
         <h1>Formula for glucose is C <sub>6</sub>H <sub>12</sub>O <sub>6</sub></h1>
+    </div>
+
+
+    <div class="practiceq7">
+        <table border="black">
+            <caption>A test table with merged cells</caption>
+            <tbody>
+                <tr>
+                    <td rowspan="2"></td>
+                    <td colspan="2">Average</td>
+                    <td rowspan="2">Red Eyes</td>
+                </tr>
+                <tr colspan="2"
+                    <td></td>
+                    <td>Height</td>
+                    <td>Weight</td>
+                </tr>
+                <tr>
+                    <td>Males</td>
+                    <td>1.9</td>
+                    <td>0.003</td>
+                    <td>40,&percnt;</td>
+                </tr>
+                <tr>
+                    <td>Females</td>
+                    <td>1.7</td>
+                    <td>0.002</td>
+                    <td>43,&percnt;</td>
+                </tr>
+            </tbody>
+
+        </table>
     </div>
 </body>
 </html>
