before adding the labels

--- a/frontend/forms-in-html/index.html
+++ b/frontend/forms-in-html/index.html
@@ -6,6 +6,24 @@
     <title>Forms</title>
 </head>
 <body>
-     
+     <form action="/action">
+        <!-- Enter username -->
+        <input type="text" placeholder="Enter your username">
+        <br>
+        <!-- Enter password -->
+        <input type="password" placeholder="Enter password">
+        <br>
+        <!-- Enter number -->
+        <input type="number" placeholder="enter phone/contact no.">
+        <br>
+        <!-- Enter time -->
+        <input type="time" placeholder="enter time">
+        <br>
+        <!-- color picker -->
+        <input type="color">
+        <br>
+        <!-- Enter mail id: -->
+        <input type="email" placeholder="enter mail id">
+     </form>
 </body>
 </html>
