--- a/frontend/till-tables-in-html/index.html
+++ b/frontend/till-tables-in-html/index.html
@@ -18,7 +18,7 @@
                 <tr>            <td>Frooti</td>         <td>10</td>         </tr>
                 <tr>            <td>Samosa</td>         <td>07</td>         </tr>
                 <tr style=>            <td>Lays</td>           <td>20</td>         </tr>       
-                <tr>            <td>Pizza</td>          <td>150</td>        </tr>
+                <tr>            <td>pizza</td>          <td>150</td>        </tr>
                 <tr>            <td>Manchurian</td>         <td>50</td>         </tr>
             </table>
         </section>
