--- a/frontend/forms-in-html/index.html
+++ b/frontend/forms-in-html/index.html
@@ -7,13 +7,18 @@
 </head>
 <body>
      <form action="/action">
-        <!-- Enter username -->
+        <label>
+        Enter username:
         <input type="text" placeholder="Enter your username">
+        </label>
         <br>
-        <!-- Enter password -->
+
+        <label>
+        Enter password
         <input type="password" placeholder="Enter password">
         <br>
-        <!-- Enter number -->
+        </label>
+        <!-- Enter number
         <input type="number" placeholder="enter phone/contact no.">
         <br>
         <!-- Enter time -->
@@ -23,7 +28,7 @@
         <input type="color">
         <br>
         <!-- Enter mail id: -->
-        <input type="email" placeholder="enter mail id">
+        <input type="email" placeholder="enter mail id"> -->
      </form>
 </body>
 </html>
